--- a/index.html
+++ b/index.html
@@ -43,6 +43,6 @@
             </div>
         </section>
 
-        <script src="./index1.js"></script>
+        <script src="./index.js"></script>
     </body>
 </html>
